--- a/index.html
+++ b/index.html
@@ -1,90 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="htmlRoot">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Berita Sederhana</title>
-  <!-- Tailwind CSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>NewsHub — Modern News Platform</title>
+  
+  <!-- Bootstrap 5 CSS (No icons) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-gray-100 min-h-screen py-8">
-  <div class="container mx-auto px-4 max-w-4xl">
-    <h1 class="text-3xl font-bold text-center mb-6 text-blue-700">📰 Berita Hari Ini</h1>
-
-    <!-- Tombol Ambil Berita -->
-    <div class="text-center mb-6">
-      <button id="fetchBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-lg font-medium">
-        Ambil Berita
+<body class="light-mode">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">NewsHub</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
       </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="ms-auto d-flex align-items-center">
+          <input class="form-control me-2" id="searchInput" type="search" placeholder="Search news..." aria-label="Search" style="max-width: 250px;">
+          <button id="darkModeToggle" class="btn btn-sm toggle-btn" type="button">🌙</button>
+        </div>
+      </div>
     </div>
+  </nav>
 
-    <!-- Loading -->
-    <div id="loading" class="hidden text-center text-gray-500">Loading...</div>
+  <!-- Main Content -->
+  <main class="container my-4">
+    <div id="articles" class="row g-4">
+      <div class="col-12 text-center">
+        <p class="loading">Loading latest news...</p>
+      </div>
+    </div>
+  </main>
 
-    <!-- Error -->
-    <div id="error" class="hidden text-center text-red-500 font-medium"></div>
+  <!-- Footer -->
+  <footer class="bg-light py-3 mt-5">
+    <div class="container text-center text-muted">
+      <p>Powered by <a href="https://gnews.io/" target="_blank" class="text-decoration-none">GNews API</a> • © 2025</p>
+    </div>
+  </footer>
 
-    <!-- Daftar Berita -->
-    <div id="newsContainer" class="space-y-6"></div>
-  </div>
-
-  <script>
-    // GANTI DENGAN API KEY KAMU
-    const API_KEY = 'b382b0617bcc49f9a93a6ebc4a134af1';
-
-    const fetchBtn = document.getElementById('fetchBtn');
-    const loading = document.getElementById('loading');
-    const errorEl = document.getElementById('error');
-    const newsContainer = document.getElementById('newsContainer');
-
-    fetchBtn.addEventListener('click', async () => {
-      // Reset tampilan
-      newsContainer.innerHTML = '';
-      errorEl.classList.add('hidden');
-      loading.classList.remove('hidden');
-
-      try {
-        // Ambil berita dari NewsAPI (berita umum dari AS)
-        const response = await fetch(
-          `https://newsapi.org/v2/top-headlines?country=us&apiKey=${API_KEY}`
-        );
-
-        const data = await response.json();
-
-        if (data.status !== 'ok') throw new Error(data.message || 'Gagal ambil data');
-
-        loading.classList.add('hidden');
-
-        // Tampilkan berita
-        data.articles.slice(0, 6).forEach(article => {
-          if (!article.title) return;
-
-          const card = document.createElement('div');
-          card.className = 'bg-white p-5 rounded-lg shadow';
-
-          // Jika ada gambar, tampilkan
-          let imgHtml = '';
-          if (article.urlToImage) {
-            imgHtml = `<img src="${article.urlToImage}" alt="berita" class="w-full h-48 object-cover rounded mb-3" />`;
-          }
-
-          card.innerHTML = `
-            ${imgHtml}
-            <h2 class="text-xl font-bold mb-2">${article.title}</h2>
-            <p class="text-gray-600 text-sm mb-3">${article.description || ''}</p>
-            <a href="${article.url}" target="_blank" class="text-blue-600 hover:underline font-medium">
-              Baca Selengkapnya →
-            </a>
-          `;
-
-          news_container.appendChild(card); // ← SALAH! harus newsContainer
-        });
-      } catch (err) {
-        loading.classList.add('hidden');
-        errorEl.textContent = '⚠️ ' + (err.message || 'Gagal mengambil berita.');
-        errorEl.classList.remove('hidden');
-      }
-    });
-  </script>
+  <!-- Bootstrap JS (Optional, only for navbar toggle) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Custom JS -->
+  <script src="script.js"></script>
 </body>
 </html>
