--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NewsHub — Modern News Platform</title>
+  <title>NewsHub — News API</title>
   
-  <!-- Bootstrap 5 CSS (No icons) -->
+  <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="light-mode">
@@ -21,14 +19,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <div class="ms-auto d-flex align-items-center">
-          <input class="form-control me-2" id="searchInput" type="search" placeholder="Search news..." aria-label="Search" style="max-width: 250px;">
+          <select id="categorySelect" class="form-select me-2" style="max-width: 180px;">
+            <option value="general">General</option>
+            <option value="business">Business</option>
+            <option value="technology">Technology</option>
+            <option value="sports">Sports</option>
+            <option value="entertainment">Entertainment</option>
+            <option value="science">Science</option>
+            <option value="health">Health</option>
+          </select>
           <button id="darkModeToggle" class="btn btn-sm toggle-btn" type="button">🌙</button>
         </div>
       </div>
     </div>
   </nav>
 
-  <!-- Main Content -->
+  <!-- Main -->
   <main class="container my-4">
     <div id="articles" class="row g-4">
       <div class="col-12 text-center">
@@ -40,14 +46,11 @@
   <!-- Footer -->
   <footer class="bg-light py-3 mt-5">
     <div class="container text-center text-muted">
-      <p>Powered by <a href="https://gnews.io/" target="_blank" class="text-decoration-none">GNews API</a> • © 2025</p>
+      <p>Powered by <a href="https://newsapi.org/" target="_blank" class="text-decoration-none">News API</a> • © 2025</p>
     </div>
   </footer>
 
-  <!-- Bootstrap JS (Optional, only for navbar toggle) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  
-  <!-- Custom JS -->
   <script src="script.js"></script>
 </body>
 </html>
