--- a/index.html
+++ b/index.html
@@ -1,56 +1,164 @@
 <!DOCTYPE html>
-<html lang="en" id="htmlRoot">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NewsHub — News API</title>
-  
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body class="light-mode">
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="#">NewsHub</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="ms-auto d-flex align-items-center">
-          <select id="categorySelect" class="form-select me-2" style="max-width: 180px;">
-            <option value="general">General</option>
-            <option value="business">Business</option>
-            <option value="technology">Technology</option>
-            <option value="sports">Sports</option>
-            <option value="entertainment">Entertainment</option>
-            <option value="science">Science</option>
-            <option value="health">Health</option>
-          </select>
-          <button id="darkModeToggle" class="btn btn-sm toggle-btn" type="button">🌙</button>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GoNews — Fast & Flexible News</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+      <div class="container">
+        <a class="navbar-brand text-primary fw-bold" href="#">GoNews</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <section class="hero-section bg-light py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-7">
+            <h1 class="display-4 fw-bold">Browse Updated News instantly</h1>
+            <p class="lead mt-3">
+              Stay informed with the latest headlines from around the world.
+            </p>
+            <a href="#" class="btn btn-primary btn-lg mt-3 py-2 px-4"
+              >Get Started</a
+            >
+          </div>
+          <div class="col-lg-5 d-none d-lg-block">
+            <img src="news.jpg" alt="News Icon" class="img-fluid rounded" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container my-4">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="input-group">
+            <span class="input-group-text"><i class="fas fa-search"></i></span>
+            <input
+              type="text"
+              id="searchInput"
+              class="form-control"
+              placeholder="Search news..."
+            />
+          </div>
         </div>
       </div>
     </div>
-  </nav>
 
-  <!-- Main -->
-  <main class="container my-4">
-    <div id="articles" class="row g-4">
-      <div class="col-12 text-center">
-        <p class="loading">Loading latest news...</p>
+    <div class="container mb-4">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <div class="d-flex justify-content-center mb-2">
+                <i
+                  class="fas fa-sync-alt text-white fa-2x bg-primary fs-2 p-2 rounded"
+                ></i>
+              </div>
+              <h5 class="card-title text-center">Always Updated</h5>
+              <p class="card-text text-center mt-2">
+                We fetch the latest headlines every few minutes to keep you
+                informed.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <div class="d-flex justify-content-center mb-2">
+                <i
+                  class="fas fa-bolt text-white fa-2x bg-primary fs-2 p-2 rounded"
+                ></i>
+              </div>
+              <h5 class="card-title text-center">Lightning Fast</h5>
+              <p class="card-text text-center mt-2">
+                Load articles in under a second with optimized performance.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body d-flex flex-column">
+              <div class="d-flex justify-content-center mb-2">
+                <i
+                  class="fas fa-mobile-alt text-white fa-2x bg-primary fs-2 p-2 rounded"
+                ></i>
+              </div>
+              <h5 class="card-title text-center">Flexible Design</h5>
+              <p class="card-text text-center mt-2">
+                Perfect on any device — desktop, tablet, or mobile.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </main>
 
-  <!-- Footer -->
-  <footer class="bg-light py-3 mt-5">
-    <div class="container text-center text-muted">
-      <p>Powered by <a href="https://newsapi.org/" target="_blank" class="text-decoration-none">News API</a> • © 2025</p>
+    <div class="container mb-4">
+      <div
+        class="d-flex flex-wrap justify-content-center gap-2"
+        id="categoryContainer"
+      ></div>
     </div>
-  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
-</body>
+    <div class="container flex-grow-1">
+      <div class="row" id="articles">
+        <div class="col-12 text-center py-5">
+          <p class="text-muted">Loading news...</p>
+        </div>
+      </div>
+    </div>
+    <footer class="bg-light py-3 mt-auto">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <p class="mb-0 text-muted">© 2025 GoNews. All rights reserved.</p>
+          </div>
+          <div class="col-md-6 text-md-end">
+            <p class="mb-0 text-muted">
+              Powered by
+              <a href="https://newsapi.org/" target="_blank" class="text-muted"
+                >News API</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="script.js"></script>
+  </body>
 </html>
